update index and styles.
Co-authored-by: Seung Lee <leark@users.noreply.github.com>

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Template</title>
+  <title>Plants Vs Monsters</title>
 </head>
 <body>
+  <div class="container">
+    <div class="plant">
+      <p>New Plant</p>
+      <button id="newPlant">New Plant</button>
+      <div class="row yourplant">
+        <!-- append in here -->
+      </div>
+    </div>
+    <div class="zombie">
+      <p>zombie</p>
+      <button id="newZombie">New zombie</button>
+      <div class="row zombies">
+      </div>
+    </div>
+    <div class="consolePlants">
+      <p></p>
+      <button id="cPlants">Console log Plants</button>
+    </div>
+  </div>
 </body>
 </html>
